fix background on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
   z-index: -1;
   animation: slide 3s ease-in-out infinite alternate;
   opacity: .5;
+  background-size: 120% 120%;
 }
 
 .bg-2 {
@@ -27,25 +28,25 @@ body {
 }
 
 .bg-home {
-  background-image: linear-gradient(-60deg, #150005 50%, #000010 50%);
+  background-image: linear-gradient(-60deg, #150005 60%, #000010 60%);
 }
 .bg-about {
-  background-image: linear-gradient(-60deg, #001018 50%, #000010 50%);
+  background-image: linear-gradient(-60deg, #001018 60%, #000010 60%);
 }
 .bg-timeline {
-  background-image: linear-gradient(-60deg, #001510 50%, #000010 50%);
+  background-image: linear-gradient(-60deg, #001510 60%, #000010 60%);
 }
 .bg-skills {
-  background-image: linear-gradient(-60deg, #150510 50%, #000010 50%);
+  background-image: linear-gradient(-60deg, #150510 60%, #000010 60%);
 }
 .bg-projects {
-  background-image: linear-gradient(-60deg, #080814 50%, #000010 50%);
+  background-image: linear-gradient(-60deg, #080814 60%, #000010 60%);
 }
 .bg-contact {
-  background-image: linear-gradient(-60deg, #001005 50%, #000010 50%);
+  background-image: linear-gradient(-60deg, #001005 60%, #000010 60%);
 }
 .bg-notfound {
-  background-image: linear-gradient(-60deg, #000000 50%, #000010 50%);
+  background-image: linear-gradient(-60deg, #000000 60%, #000010 60%);
 }
 
 
